# api/TallySheetVersionApi/TallySheetVersionPRE21Api.py
@@ -1,0 +1,46 @@
+from util import RequestBody
+from schemas import TallySheetVersionPRE21Schema
+from orm.entities.Submission import TallySheet
+from orm.entities.SubmissionVersion.TallySheetVersion import TallySheetVersionPRE21
+from exception import NotFoundException
+
+
+def get_by_id(tallySheetId, tallySheetVersionId):
+    result = TallySheetVersionPRE21.get_by_id(
+        tallySheetId=tallySheetId,
+        tallySheetVersionId=tallySheetVersionId
+    )
+
+    print("\n\n\n ####### result ##### ", result)
+
+    return TallySheetVersionPRE21Schema().dump(result).data
+
+
+def get_all(tallySheetId):
+    tallySheet = TallySheet.get_by_id(tallySheetId=tallySheetId)
+    if tallySheet is None:
+        raise NotFoundException("Tally sheet not found. (tallySheetId=%d)" % tallySheetId)
+
+    result = TallySheetVersionPRE21.get_all(
+        tallySheetId=tallySheetId
+    )
+
+    return TallySheetVersionPRE21Schema(many=True).dump(result).data
+
+
+def create(tallySheetId, body):
+    request_body = RequestBody(body)
+    tallySheetVersion = TallySheetVersionPRE21.create(
+        tallySheetId=tallySheetId
+    )
+
+    tally_sheet_content = request_body.get("content")
+    if tally_sheet_content is not None:
+        for row in tally_sheet_content:
+            party_count_body = RequestBody(row)
+            tallySheetVersion.add_row(
+                count=party_count_body.get("count"),
+                invalidVoteCategoryId=party_count_body.get("invalidVoteCategoryId")
+            )
+
+    return TallySheetVersionPRE21Schema().dump(tallySheetVersion).data
